// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`fa should render correctly 1`] = `
.c0 {
  fill: #545456;
  cursor: default;
}

.c0:hover {
  fill: #545456;
}

<FasArrowLeft
  selectable={false}
  size="44px"
>
  <styled.svg
    height="44px"
    selectable={false}
    viewBox="0 0 448 512"
    width="44px"
    xmlns="http://www.w3.org/2000/svg"
  >
    <svg
      className="c0"
      height="44px"
      viewBox="0 0 448 512"
      width="44px"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M257.5 445.1l-22.2 22.2c-9.4 9.4-24.6 9.4-33.9 0L7 273c-9.4-9.4-9.4-24.6 0-33.9L201.4 44.7c9.4-9.4 24.6-9.4 33.9 0l22.2 22.2c9.5 9.5 9.3 25-.4 34.3L136.6 216H424c13.3 0 24 10.7 24 24v32c0 13.3-10.7 24-24 24H136.6l120.5 114.8c9.8 9.3 10 24.8.4 34.3z"
      />
    </svg>
  </styled.svg>
</FasArrowLeft>
`;

exports[`fa should render correctly with selectable 1`] = `
.c0 {
  fill: #545456;
  cursor: pointer;
}

.c0:hover {
  fill: #757679;
}

<FasArrowLeft
  selectable={true}
  size="44px"
>
  <styled.svg
    height="44px"
    selectable={true}
    viewBox="0 0 448 512"
    width="44px"
    xmlns="http://www.w3.org/2000/svg"
  >
    <svg
      className="c0"
      height="44px"
      viewBox="0 0 448 512"
      width="44px"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M257.5 445.1l-22.2 22.2c-9.4 9.4-24.6 9.4-33.9 0L7 273c-9.4-9.4-9.4-24.6 0-33.9L201.4 44.7c9.4-9.4 24.6-9.4 33.9 0l22.2 22.2c9.5 9.5 9.3 25-.4 34.3L136.6 216H424c13.3 0 24 10.7 24 24v32c0 13.3-10.7 24-24 24H136.6l120.5 114.8c9.8 9.3 10 24.8.4 34.3z"
      />
    </svg>
  </styled.svg>
</FasArrowLeft>
`;

exports[`fa should render correctly with size 1`] = `
.c0 {
  fill: #545456;
  cursor: default;
}

.c0:hover {
  fill: #545456;
}

<FasArrowLeft
  selectable={false}
  size="100px"
>
  <styled.svg
    height="100px"
    selectable={false}
    viewBox="0 0 448 512"
    width="100px"
    xmlns="http://www.w3.org/2000/svg"
  >
    <svg
      className="c0"
      height="100px"
      viewBox="0 0 448 512"
      width="100px"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M257.5 445.1l-22.2 22.2c-9.4 9.4-24.6 9.4-33.9 0L7 273c-9.4-9.4-9.4-24.6 0-33.9L201.4 44.7c9.4-9.4 24.6-9.4 33.9 0l22.2 22.2c9.5 9.5 9.3 25-.4 34.3L136.6 216H424c13.3 0 24 10.7 24 24v32c0 13.3-10.7 24-24 24H136.6l120.5 114.8c9.8 9.3 10 24.8.4 34.3z"
      />
    </svg>
  </styled.svg>
</FasArrowLeft>
`;
